--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -2341,6 +2341,9 @@ Community Highlights and Events
   padding: 1.5em 0.809em;
   background-color: #5a5a5a;
   border-bottom: 1px solid #525252; }
+  @media screen and (min-width: 320px) {
+    .home__highlights {
+      padding-bottom: 1em; } }
   @media screen and (min-width: 768px) {
     .home__highlights {
       padding: 3em 3.236em; } }
@@ -2515,6 +2518,9 @@ Community Highlights and Events
   height: 100px; }
   .highlights__event--item:last-child {
     margin-right: 0; }
+  @media screen and (min-width: 320px) {
+    .highlights__event--item {
+      margin-bottom: 0.8em; } }
   @media screen and (min-width: 480px) {
     .highlights__event--item {
       float: left;
